--- a/javascrip_shope/index.html
+++ b/javascrip_shope/index.html
@@ -20,8 +20,15 @@
     <input
       type="number"
       id="valor_produto"
-      placeholder="Digite o valor do produto"
-    /><br /><br />
+      placeholder="preço"
+    />
+    <label for="lucro_desejado">Lucro desejado em (%):</label>
+    <input
+      type="number"
+      id="lucro_desejado"
+      placeholder="80%"
+    />
+    <br /><br />
 
     <h3>Frete grátis?</h3>
     <div class="opcoes">
