--- a/javascrip_shope/index.html
+++ b/javascrip_shope/index.html
@@ -40,7 +40,7 @@
     </div>
    
 
-    <button type="button" class="btn btn-primary"   onclick="calcular()">Calcular</button>
+    <button type="button" class="btn btn-primary btn-lg d-grid gap-1 col-3 mx-auto"   onclick="calcular()">Calcular</button>
 
     <div id="resultado" class="result"></div>
 
